# Swin-X2S

./: LICENSE  README.md  inferers.py  main.py  test.py  trainer.py
dataset/: DigitallyReconstructedRadiograph.cpp  IdentityDirection.cpp  dataset_pelvic1k.py  dataset_ribseg.py  dataset_spine1k.py  dataset_totalsegmentator.py  dataset_verse19.py
dataset/CTPelvic1K/: data_list.json
dataset/CTSpine1K/: data_list.json
dataset/DRR/IdentityDirection/: CMakeLists.txt
dataset/RibSeg/: data_list.json
dataset/Totalsegmentator_all/: data_list.json
dataset/Totalsegmentator_femur/: data_list.json
dataset/Totalsegmentator_pelvic/: data_list.json
dataset/Totalsegmentator_rib/: data_list.json
dataset/Totalsegmentator_spine/: data_list.json
dataset/VERSE19/: data_list.json
models/: MStwoDPC.py  TLP.py  get_model.py  oneDC.py  swin_x2s.py  twoDPC.py
morphometry/: femur_morphometry.py  femur_stastical_vis.py  hip_landmarks.py  hip_stastical_vis.py  rib_centerline.py  rib_stastical_vis.py  vertebra_morphometry.py  vertebra_stastical_vis.py
morphometry/xrayto3d_morphometry/: __init__.py  geom_ops.py  hip_lm_utils.py  io_utils.py  mesh_utils.py  optimization_utils.py  rib_utils.py  sitk_utils.py
scripts/subsets/: ribseg_swinx2sbase_view1.sh  spine1k_swinx2sbase_view1.sh  totalall_swinx2sbase_view1.sh  totalfemur_swinx2sbase_view1.sh  totalpelvic_swinx2sbase_view1.sh  totalrib_swinx2sbase_view1.sh  (+2 more)
utils/: __init__.py  data_utils.py  misc.py
visualization/: slicer_visualization_3d.py  visualization_ablation.py  visualization_subsets.py  visualiztion_models.py
(+73 files in other folders)
